force-app/main/default/objects/HDT_IndemnitiesDays__mdt/HDT_IndemnitiesDays__mdt.object-meta.xml
<CustomObject>
    <label>Giorni Calcolo Indennizzo</label>
    <pluralLabel>Giorni Calcolo Indennizzi</pluralLabel>
</CustomObject>