force-app/main/default/objects/HDT_IndemnitiesDays__mdt/fields/BasicAmount__c.field-meta.xml
<CustomField>
    <fullName>BasicAmount__c</fullName>
    <label>Importo Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>