force-app/main/default/objects/HDT_IndemnitiesDays__mdt/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Servizio</label>
    <length>80</length>
    <type>Text</type>
</CustomField>