force-app/main/default/objects/HDT_IndemnitiesDays__mdt/fields/ComputeType__c.field-meta.xml
<CustomField>
    <fullName>ComputeType__c</fullName>
    <label>Tipo di Calcolo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <default>true</default>
                <label>S</label>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>