force-app/main/default/objects/HDT_IndemnitiesDays__mdt/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Processo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>