force-app/main/default/objects/HDT_IndemnitiesDays__mdt/fields/SuspensionDays__c.field-meta.xml
<CustomField>
    <fullName>SuspensionDays__c</fullName>
    <label>Giorni in Sospensione</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>