force-app/main/default/objects/HDT_IndemnitiesDays__mdt/fields/SuspensionDaysRectification__c.field-meta.xml
<CustomField>
    <fullName>SuspensionDaysRectification__c</fullName>
    <label>Giorni Sospensione Rettifica</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>